--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
-TODO ● Documentar la versión de los recursos utilizados.
 <!DOCTYPE html>
 <html lang="es">
 
-<head>
-	<!-- Metadatos -->
+	<head>
+		<!-- Metadatos -->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="Author" content="Christian Chacón B">
@@ -18,7 +17,7 @@ TODO ● Documentar la versión de los recursos utilizados.
 
 	<!-- bootstrap -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-		integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+	integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 	<!-- Favicon -->
 	<link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon/favicon-32x32.png">
@@ -32,10 +31,10 @@ TODO ● Documentar la versión de los recursos utilizados.
 </head>
 
 <body>
-
+	
 	TODO links a diferentes secciones de la página, haciendo un smooth scroll.
 	<!-- Barra de navegacion -->
-
+	
 	<div class="barra-nav sticky-top bg-propio">
 		<nav class="navbar navbar-expand-sm px-5 justify-content-between" data-bs-theme="dark">
 			<a class="navbar-brand" href="#">
@@ -51,7 +50,7 @@ TODO ● Documentar la versión de los recursos utilizados.
 				</button>
 				<div class="collapse navbar-collapse " id="navbarNavAltMarkup">
 					<div class="navbar-nav ms-auto">
-						<a class="nav-link active" aria-current="page" href="#colapso">Inicio</a>
+						<a class="nav-link active" aria-current="page" href="#carrusel_viajes">Inicio</a>
 						<a class="nav-link active" href="#presentacion">Quienes Somos</a>
 						<a class="nav-link active" href="#destacados">Destacados </a>
 						<a class="nav-link active" href="#contacto">Contacto</a>
@@ -87,144 +86,139 @@ TODO ● Documentar la versión de los recursos utilizados.
 
 	<!--3 grupos Presentacion, destacados,contacto -->
 	<div class="bg-propio">
-
 		<div class="container">
-			<!-- presentacion -->
-			<section id="presentacion">
-				<h2 class=" container row justify-content-center text-white p-5 border-bottom border-white mb-5">
-					¿Quienes Somos?
-				</h2>
-					<div class="container row justify-content-center  ">
-						<div class="p-5 col-md-3 ">
-							<span class="d-flex justify-content-center bg-primary py-1 ">
-								<i class="fa-solid fa-plane text-white "></i>
-							</span>
-							<p class="text-start text-white ">
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat amet sapiente consectetur
-								consequuntur, pariatur eum perspiciatis corporis necessitatibus obcaecati porro nulla voluptatem
-								totam culpa, at laborum. Labore ab numquam commodi!
-							</p>
+				<!-- presentacion -->
+				<section id="presentacion">
+					<h2 class=" row justify-content-center text-white p-5 border-bottom border-white mb-5">
+						¿Quienes Somos?
+					</h2>
+					<div class="row justify-content-center  ">
+							<div class="p-5 col-md-3 ">
+								<span class="d-flex justify-content-center bg-primary py-1 ">
+									<i class="fa-solid fa-plane text-white "></i>
+								</span>
+								<p class="text-start text-white ">
+									Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat amet sapiente consectetur
+									consequuntur, pariatur eum perspiciatis corporis necessitatibus obcaecati porro nulla voluptatem
+									totam culpa, at laborum. Labore ab numquam commodi!
+								</p>
+							</div>
+							<div class="p-5 col-md-3 ">
+								<p class="text-start text-white ">
+									Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste facilis repellat architecto ad
+									ratione, eligendi consectetur maiores unde culpa dignissimos, eveniet debitis tenetur excepturi!
+									Doloribus vel dolore aliquam tenetur. Minus!
+									Lorem ipsum dolor, sit amet consectetur
+								</p>
+								<span class="d-flex justify-content-center bg-primary py-1">
+									<i class="fa-solid fa-mountain bg-primary text-white "></i>
+								</span>
 						</div>
 						<div class="p-5 col-md-3 ">
-							<p class="text-start text-white ">
-								Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste facilis repellat architecto ad
-								ratione, eligendi consectetur maiores unde culpa dignissimos, eveniet debitis tenetur excepturi!
-								Doloribus vel dolore aliquam tenetur. Minus!
-								Lorem ipsum dolor, sit amet consectetur 
-							</p>
 							<span class="d-flex justify-content-center bg-primary py-1">
-								<i class="fa-solid fa-mountain bg-primary text-white "></i>
+								<i class="fa-solid fa-route bg-primary text-white "></i>
 							</span>
-					</div>
-					<div class="p-5 col-md-3 ">
-						<span class="d-flex justify-content-center bg-primary py-1">
-							<i class="fa-solid fa-route bg-primary text-white "></i>
-						</span>
-						<p class="text-start text-white ">
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, exercitationem quod nesciunt
-							fugit
-							dignissimos quibusdam debitis sint omnis id, dolores repudiandae praesentium molestias
-							voluptatibus
-							magni quia expedita. Sequi
-						</p>
-					</div>
-				</div>
-			</section>
-			<div id="destacados">
-				<h2 class=" container row justify-content-center text-white  border-bottom border-white p-5 mb-5 ">
-					Destacados
-				</h2>
-				<div class="d-flex mb-auto p-1 bg-black ">
-					<!-- tarjeta 1 -->
-					<div class="card col-10 col-sm-10 col-md-3 p-3 text-white bg-black ">
-						<img src="assets/img/card-1.webp" class="card-img-top" alt="card-1">
-						<div class="card-body border border-2 bg-primary ">
-							<h5 class="tarjetas card-title title-color cabinBold ">
-							</h5>
-							<p class="mb-2 ">
-								Mus enim elementum dignissim class eleifend justo, ut nunc magnis est vulputate nostra,
-								blandit
-								erat
-								luctus faucibus orci.
+							<p class="text-start text-white ">
+								Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, exercitationem quod nesciunt
+								fugit
+								dignissimos quibusdam debitis sint omnis id, dolores repudiandae praesentium molestias
+								voluptatibus
+								magni quia expedita. Sequi
 							</p>
 						</div>
 					</div>
-					<!-- tarjeta 2 -->
-					<div class="card col-10 col-sm-10 col-md-3 p-3 text-white bg-black ">
-						<img src="assets/img/card-2.webp" class="card-img-top" alt="card-2">
-						<div class="card-body border border-2 bg-primary ">
-							<h5 class="tarjetas card-title title-color cabinBold ">
-							</h5>
-							<p class="mb-2 ">
-								Congue fermentum dignissim rhoncus elementum ac nisi, proin phasellus lacinia sed faucibus
-								mauris,
-								taciti scelerisque nulla ornare consequat.
-							</p>
+				</section>
+				<section id="destacados">
+					<h2 class=" row justify-content-center text-white  border-bottom border-white p-5 mb-5 ">
+						Destacados
+					</h2>
+					<div class="row justify-content-center  mb-auto p-1 bg-black ">
+						<!-- tarjeta 1 -->
+						<div class="card col-md-3 p-3 text-white bg-black ">
+							<img src="assets/img/card-1.webp" class="card-img-top" alt="card-1">
+							<div class="card-body border border-2 bg-primary ">
+								<h5 class="tarjetas card-title title-color cabinBold ">
+								</h5>
+								<p class="mb-2 ">
+									Mus enim elementum dignissim class eleifend justo, ut nunc magnis est vulputate nostra,
+									blandit
+									erat
+									luctus faucibus orci.
+								</p>
+							</div>
+						</div>
+						<!-- tarjeta 2 -->
+						<div class="card col-md-3 p-3 text-white bg-black ">
+							<img src="assets/img/card-2.webp" class="card-img-top" alt="card-2">
+							<div class="card-body border border-2 bg-primary ">
+								<h5 class="tarjetas card-title title-color cabinBold ">
+								</h5>
+								<p class="mb-2 ">
+									Congue fermentum dignissim rhoncus elementum ac nisi, proin phasellus lacinia sed faucibus
+									mauris,
+									taciti scelerisque nulla ornare consequat.
+								</p>
+							</div>
+						</div>
+						<!-- tarjeta 3 -->
+						<div class="card col-md-3 p-3 text-white bg-black ">
+							<img src="assets/img/card-3.webp" class="card-img-top" alt="recipe-card-3">
+							<div class="card-body border border-2 bg-primary ">
+								<h5 class="tarjetas card-title title-color cabinBold ">
+								</h5>
+								<p class="mb-2 ">
+									Cubilia elementum posuere arcu rhoncus egestas lectus, diam aliquam laoreet ac eleifend
+									risus,
+									urna
+									auctor inceptos mattis dapibus.
+								</p>
+							</div>
+						</div>
+						<!-- tarjeta 4 -->
+						<div class="card col-md-3 p-3 text-white bg-black ">
+							<img src="assets/img/card-4.webp" class="card-img-top" alt="card-4">
+							<div class="card-body border border-2 bg-primary ">
+								<h5 class="tarjetas card-title title-color cabinBold ">
+								</h5>
+								<p class="mb-2 ">
+									Cubilia elementum posuere arcu rhoncus egestas lectus, diam aliquam laoreet ac eleifend
+									risus,
+									urna
+									auctor inceptos mattis dapibus.
+								</p>
+							</div>
 						</div>
 					</div>
-					<!-- tarjeta 3 -->
-					<div class="card col-10 col-sm-10 col-md-3 p-3 text-white bg-black ">
-						<img src="assets/img/card-3.webp" class="card-img-top" alt="recipe-card-3">
-						<div class="card-body border border-2 bg-primary ">
-							<h5 class="tarjetas card-title title-color cabinBold ">
-							</h5>
-							<p class="mb-2 ">
-								Cubilia elementum posuere arcu rhoncus egestas lectus, diam aliquam laoreet ac eleifend
-								risus,
-								urna
-								auctor inceptos mattis dapibus.
-							</p>
-						</div>
-					</div>
-					<!-- tarjeta 4 -->
-					<div class="card col-10 col-sm-10 col-md-3 p-3 text-white bg-black ">
-						<img src="assets/img/card-4.webp" class="card-img-top" alt="card-4">
-						<div class="card-body border border-2 bg-primary ">
-							<h5 class="tarjetas card-title title-color cabinBold ">
-							</h5>
-							<p class="mb-2 ">
-								Cubilia elementum posuere arcu rhoncus egestas lectus, diam aliquam laoreet ac eleifend
-								risus,
-								urna
-								auctor inceptos mattis dapibus.
-							</p>
-						</div>
-					</div>
-				</div>
-			</div>
-			TODO ● Una sección de formulario de contacto.
-			<div id="contacto">
-				<h2 class=" container row justify-content-center text-white py5 border-bottom border-white mb-5">
-					Contacto
-				</h2>
-				<form action="">
-				</form>
-			</div>
+				</section>
+				<section id="contacto">
+					<h2 class=" container row justify-content-center text-white  border-bottom border-white p-5 mb-5 ">
+						Contacto
+					</h2>
+				</section>
 		</div>
 	</div>
 	<!-- Pie de pagina -->
 	<footer>
-		<section class="row justify-content-center text-white  border-bottom border-white p-5 mb-5">
+		<section class="d-flex justify-content-around  bg-primary text-white py-5 ">
 			<h2>
-				<span class="texto-lobster tx-color "></span>
+				VIAJES CHILE
 			</h2>
+				<div class="align-items-center ">
+					<a href="https://github.com/" target="_blank">
+						<i class="fa-brands fa-github px-3 fs-2 text-white"></i>
+					</a>
+					<a href="https://cl.linkedin.com/" target="_blank">
+						<i class="fa-brands fa-linkedin px-3 fs-2 text-white"></i>
+					</a>
+					<a href="https://twitter.com/?lang=es" target="_blank">
+						<i class="fa-brands fa-twitter px-3 fs-2 text-white"></i>
+					</a>
+					<a href="https://web.facebook.com/?locale=es_LA&_rdc=1&_rdr" target="_blank">
+						<i class="fa-brands fa-facebook px-3 fs-2 text-white"></i>
+					</a>
+				</div>
 		</section>
 	</footer>
-	TODO ● Una sección footer con links a las redes sociales.
-
-	TODO 4. Agregar componentes que utilicen JavaScript.
-	(2 Puntos)
-	● Utilizar adecuadamente la sintaxis de JavaScript.
-	● Aplicar correctamente dos o más componentes de Bootstrap JS (carousel,
-	tooltips, entre otros).
-	● El código debe estar ordenado y documentado
-	TODO 5. Gestionar el código fuente utilizando Github.
-	(2 Puntos)
-	● Inicializar GIT para versionar el proyecto localmente, realizando 5 o más
-	commits.
-	● Implementar la creación de repositorio remoto en Github para el
-	versionamiento del proyecto.
-	● Crear la página en Github Pages.
 
 	<!-- scripts de base -->
 	<!-- bootstrap -->
